Code - Work in progress

--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
@@ -1,4 +1,4 @@
-{% if settings.captcha == true %}
+{% if settingRow.captcha == true %}
     <div class="captcha">
         <i class="fa fa-retweet icon"></i>
         <img src="data:image/png;base64,{{captchaImage}}" alt="Captcha image"/>
