--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -28,7 +28,7 @@
                 {{form_widget(form.roleId)}}
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-tags"></i></span>
-                    {{response.rolesSelect|raw}}
+                    {{response.values.rolesSelect|raw}}
                 </div>
             </div>
             
