--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_page.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_page.html.twig
@@ -1,10 +1,10 @@
 <div class="margin_bottom">
     <div id="language_flag">
-        {% for value in response.values.languages %}
-            {% if (file_exists(urlRoot ~ "/bundles/uebusaito/images/templates/" ~ response.settings['template'] ~ "/lang/" ~ value.code ~ ".png") == true) %}
-                <img id="language_flag_{{value.code}}" class="language_page_flag" src="{{asset("bundles/uebusaito/images/templates/" ~ response.settings['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>
+        {% for value in response.values.languageRows %}
+            {% if (file_exists(urlRoot ~ "/bundles/uebusaito/images/templates/" ~ response.values.settingRow['template'] ~ "/lang/" ~ value.code ~ ".png") == true) %}
+                <img id="language_flag_{{value.code}}" class="language_page_flag" src="{{asset("bundles/uebusaito/images/templates/" ~ response.values.settingRow['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>
             {% else %}
-                <img id="language_flag_{{value.code}}" class="language_page_flag" src="{{asset("bundles/uebusaito/images/templates/" ~ response.settings['template'] ~ "/lang/empty.png")}}" alt="{{value.code}}.png"/>
+                <img id="language_flag_{{value.code}}" class="language_page_flag" src="{{asset("bundles/uebusaito/images/templates/" ~ response.values.settingRow['template'] ~ "/lang/empty.png")}}" alt="{{value.code}}.png"/>
             {% endif %}
         {% endfor %}
     </div>
