--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/flashBag.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/flashBag.html.twig
@@ -1,5 +1,5 @@
-{% if app.session.flashBag.has("warning") %}
-    {% set class = "alert alert-warning" %}
+{% if app.session.flashBag.has("info") %}
+    {% set class = "alert alert-info" %}
     {% set style = "display: block;" %}
     {% set type = "warning" %}
 {%else%}
