--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
@@ -16,7 +16,7 @@
                 </button>
             </div>
             <div class="navbar_header_content">
-                <p class="logo_mobile display_mobile">{{websiteName}}</p>
+                <p class="logo_small display_mobile">{{websiteName}}</p>
             </div>
             <div class="display_inline float_right">
                 <div class="navbar_header_content navbar_header_icon">
