--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
@@ -155,13 +155,14 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
 #upload .container_controls .container_progressBar { display: inline-block; vertical-align: middle; width: 50%; margin-bottom: 5px; }
 #upload .container_controls .container_buttons { display: inline-block; vertical-align: middle; margin-bottom: 5px; }
 
-.logo_desktop { display: none; font-family: "acme", sans-serif; font-size: 75px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin: 0; }
+.logo_big { display: none; font-family: "acme", sans-serif; font-size: 75px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin: 0; }
 
-.logo_mobile { display: none; font-family: "acme", sans-serif; font-size: 24px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 2px 2px #000000; margin: 0; }
+.logo_small { display: none; font-family: "acme", sans-serif; font-size: 24px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 2px 2px #000000; margin: 0; }
+
+.logo_message { font-family: "acme", sans-serif; font-size: 40px; text-align: center; margin: 0px; }
 
 /* --- */
-@media (max-width: 992px) { .message_single_page i { font-size: 12em; color: #cecece; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin-bottom: 40px; }
-  .message_single_page p { font-family: "acme", sans-serif; font-size: 35px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; }
+@media (max-width: 992px) { .h1_big { font-size: 30px; }
   .nav_bar_fix { margin-bottom: 55px; }
   .navbar-default { position: fixed; top: 0; left: 0; right: 0; border-width: 0 0 1px; border-radius: 0; -webkit-box-shadow: 0px 0px 20px #444444; -moz-box-shadow: 0px 0px 20px #444444; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=20, Direction=0, Color='#444444')"; box-shadow: 0px 0px 20px #444444; }
   .navbar-default .navbar-header { display: block !important; float: none !important; padding: 5px 0; }
@@ -183,10 +184,9 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   #panel_id_5 .search_input .fa-search { position: absolute; top: 10px; left: 11px; color: #ffffff; }
   #panel_id_5 .form-group { margin: 0; }
   #panel_id_5 .form-group input { padding-left: 40px; } }
-@media (min-width: 992px) { .message_single_page i { font-size: 15em; color: #cecece; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; margin-bottom: 40px; }
-  .message_single_page p { font-family: "acme", sans-serif; font-size: 75px; color: #ffffff; text-shadow: -1px 0 #000000, 0 1px #000000, 1px -1px #000000, 5px 5px #000000; }
+@media (min-width: 992px) { .h1_big { font-size: 100px; }
   .search_input { width: 30%; }
-  .nav_bar_fix { margin-bottom: 0; }
+  .nav_bar_fix { margin-bottom: 0px; }
   .navbar-default { position: relative; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-filter: none; filter: none; box-shadow: none; }
   .navbar-default .navbar-header { display: none !important; float: left !important; }
   .navbar-default .navbar-toggle { display: none; }
@@ -206,7 +206,7 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   #panel_id_5 .search_input { cursor: pointer; position: absolute; width: 34px; height: 33px; background-color: #000000; border-radius: 4px; }
   #panel_id_5 .search_input .fa-search { position: absolute; top: 10px; left: 11px; color: #ffffff; }
   #panel_id_5 .form-group input { padding-left: 40px; } }
-body { margin-bottom: 150px; }
+body { margin-bottom: 140px; }
 
 .navbar-default { background-color: #2f343a; min-height: auto !important; }
 .navbar-default .navbar-header { display: none; position: relative; }
