--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/static/error.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/static/error.html.twig
@@ -1,4 +1,4 @@
-<div class="message_single_page horizontal_center margin_top">
-    <i class="fa fa-exclamation-triangle margin_top"></i>
-    <p>{% trans %}error_1{% endtrans %} {{app.request.get("error")}}</p>
+<div class="horizontal_center margin_top">
+    <i class="fa fa-exclamation-triangle fa-5x margin_top"></i>
+    <h1 class="h1_big">{% trans %}error_1{% endtrans %} {{app.request.get("error")}}</h1>
 </div>
