--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -29,7 +29,7 @@
                                 <input id="form_settings_languageManage" name="form_settings[languageManage]" value="" class="form-control"/>
                             </div>
                             <i id="settings_language_manage_confirm" class="fa fa-check-circle-o fa-2x button_icon_inline"></i>
-                            <i id="settings_language_manage_erase" class="fa fa-eraser fa-2x button_icon_inline"></i>
+                            <i id="settings_language_manage_erase" class="fa fa-times-circle-o fa-2x button_icon_inline"></i>
                         </div>
                     </div>
                 </div>
