--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/pages_selection_desktop.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/pages_selection_desktop.html.twig
@@ -44,6 +44,11 @@
                     <i class="fa fa-caret-down"></i>
                     <i class="fa fa-caret-up"></i>
                 </th>
+                <th class="cursor_pointer">
+                    {% trans %}pages_selection_desktop_9{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
             </tr>
         </thead>
         <tbody class="table_tbody">
