--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
@@ -2,26 +2,39 @@
 
 .logo_big {
     display: none;
-    font-family: "acme", sans-serif;
-    font-size: 75px;
-    color: #ffffff;
-    text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
     margin: 0px 0px 0px 10px;
+    
+    img {
+        width: 100px;
+    }
+    
+    p {
+        position: relative;
+        top: 15px;
+        font-family: "acme", sans-serif;
+        font-size: 50px;
+        color: #ffffff;
+        text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
+        margin: 0;
+    }
 }
 .logo_small {
     display: none;
-    font-family: "acme", sans-serif;
-    font-size: 24px;
-    color: #ffffff;
-    margin: 0px;
-}
-.logo_message {
-    font-family: "acme", sans-serif;
-    font-size: 40px;
-    color: #ffffff;
-    text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
-    text-align: center;
-    margin: 0px;
+    margin: 0;
+    
+    img {
+        width: 30px;
+    }
+    
+    p {
+        position: relative;
+        top: 5px;
+        font-family: "acme", sans-serif;
+        font-size: 20px;
+        color: #ffffff;
+        text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
+        margin: 0;
+    }
 }
 
 @media(max-width: $maxWidth) {
@@ -30,7 +43,7 @@
     }
     
     .nav_bar_fix {
-        margin-bottom: 55px;
+        height: 55px;
     }
     
     .navbar-default {
@@ -159,14 +172,6 @@
         font-size: 100px;
     }
     
-    .search_input {
-        width: 30%;
-    }
-    
-    .nav_bar_fix {
-        margin-bottom: 0px;
-    }
-    
     .navbar-default {
         position: relative;
         
@@ -224,6 +229,10 @@
         }
     }
     
+    .search_input {
+        width: 30%;
+    }
+    
     .authentication_maintenance {
         max-width: 50%;
         margin: auto;
@@ -231,7 +240,7 @@
     
     #panel_id_4 {
         position: absolute;
-        top: -70px;
+        top: -65px;
         right: 10px;
         
         .module_settings {
@@ -246,7 +255,7 @@
     
     #panel_id_5 {
         position: absolute;
-        top: -70px;
+        top: -65px;
         right: 180px;
         
         .module_settings {
@@ -490,8 +499,8 @@ body {
 }
 
 .avatar {
-    width: 100px;
-    height: 100px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 .jqte {
