--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -8,22 +8,23 @@
 
         <form id="form_cp_page_profile" action="{{path("cp_page_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.language, {'label': "page_profile_2"})}}
-            {{form_row(form.parent, {'label': "page_profile_3"})}}
             
             <div class="form-group">
-                {{form_label(form.title, "page_profile_4")}}
+                {{form_label(form.alias, "page_profile_3")}}
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-header"></i></span>
-                    {{form_errors(form.title)}}
-                    {{form_widget(form.title)}}
+                    {{form_errors(form.alias)}}
+                    {{form_widget(form.alias)}}
                 </div>
             </div>
             
-            {{form_row(form.controllerAction, {'label': "page_profile_5"})}}
-            {{form_row(form.argument, {'label': "page_profile_6"})}}
+            {{form_row(form.parent, {'label': "page_profile_4"})}}
+            {{form_row(form.title, {'label': "page_profile_5"})}}
+            {{form_row(form.controllerAction, {'label': "page_profile_6"})}}
+            {{form_row(form.argument, {'label': "page_profile_7"})}}
             
             <div id="form_page_roleId_wordTag_container" class="form-group">
-                {{form_label(form.roleId, "page_profile_7")}}
+                {{form_label(form.roleId, "page_profile_8")}}
                 {{form_errors(form.roleId)}}
                 {{form_widget(form.roleId)}}
                 <div class="input-group">
@@ -32,11 +33,11 @@
                 </div>
             </div>
             
-            {{form_row(form.protected, {'label': "page_profile_8"})}}
-            {{form_row(form.showInMenu, {'label': "page_profile_9"})}}
-            {{form_row(form.menuName, {'label': "page_profile_10"})}}
-            {{form_row(form.onlyLink, {'label': "page_profile_11"})}}
-            {{form_row(form.link, {'label': "page_profile_12"})}}
+            {{form_row(form.protected, {'label': "page_profile_9"})}}
+            {{form_row(form.showInMenu, {'label': "page_profile_10"})}}
+            {{form_row(form.menuName, {'label': "page_profile_11"})}}
+            {{form_row(form.onlyLink, {'label': "page_profile_12"})}}
+            {{form_row(form.link, {'label': "page_profile_13"})}}
 
             {{form_widget(form._token)}}
 
