--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -16,7 +16,7 @@
     <link href="{{asset("bundles/uebusaito/css/lib/bootstrap_3.3.7.min.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/lib/bootstrap-switch_3.3.2.min.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/lib/font-awesome_4.7.0_custom.min.css")}}" rel="stylesheet">
-    <link href="{{asset("bundles/uebusaito/css/basic.css")}}" rel="stylesheet"/>
+    <link href="{{asset("bundles/uebusaito/css/" ~ settingRow['template'] ~ ".css")}}" rel="stylesheet"/>
 {% endblock%}
 
 {% block bodyIncludeTop %}
